Added assembler compat recipes